Avance del proyecto

--- a/application/src/app/main/customers/components/dialog-detail/dialog-detail.component.html
+++ b/application/src/app/main/customers/components/dialog-detail/dialog-detail.component.html
@@ -4,7 +4,7 @@
     <li class="list-group-item"><span class="fw-bolder">Nombre: </span>{{ customer.name }} {{ customer.surname }}</li>
     <li class="list-group-item"><span class="fw-bolder">Teléfono: </span>{{ customer.phone }}</li>
     <li class="list-group-item"><span class="fw-bolder">Género: </span>{{ customer.genderDescription }}</li>
-    <li class="list-group-item"><span class="fw-bolder">Fecha de cumpleaños: </span>{{ customer.dateBirth | formatString }}</li>
+    <li class="list-group-item"><span class="fw-bolder">Fecha de cumpleaños: </span>{{ customer.dateBirth | formatDateBirth }}</li>
   </ul>
 </div>
 <div class="mt-2 text-center">
