--- a/application/src/app/shared/layout/menu/menu.component.html
+++ b/application/src/app/shared/layout/menu/menu.component.html
@@ -85,7 +85,7 @@
         >
       </li>
       <li class="list-group-item">
-        <a class="dropdown-item option-user" href=""
+        <a class="dropdown-item option-user" routerLink="/services"
         ><i class="pi pi-clock link-icon"></i> Servicios</a
         >
       </li>
