--- a/application/src/app/main/login/pages/login/login.component.html
+++ b/application/src/app/main/login/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="animate__animated animate__fadeInUp" *ngIf="loading">
   <app-spinner-page></app-spinner-page>
 </div>
-<div class="background-fondo" *ngIf="!loading">
+<div class="background-fondo animate__animated animate__fadeInUp" *ngIf="!loading">
   <div class="row d-flex">
     <div class="col-md-8 d-md-block d-none container-fondo">
       <img
