--- a/application/src/app/shared/layout/menu/menu.component.html
+++ b/application/src/app/shared/layout/menu/menu.component.html
@@ -80,7 +80,7 @@
         >
       </li>
       <li class="list-group-item">
-        <a class="dropdown-item option-user" href=""
+        <a class="dropdown-item option-user" routerLink="/collaborators"
         ><i class="pi pi-users link-icon"></i> Colaboradores</a
         >
       </li>
